[metadata]
name = sage_source_loader
version = 0.1
description = Source loader for .sage files
long_description = file: README.rst
long_description_content_type = text/x-rst
license = GNU General Public License (GPL) v2 or later
author = Matthias Koeppe
author_email = mkoeppe@math.ucdavis.edu
url = https://github.com/mkoeppe/sage_source_loader
keywords =
    sage

[options]
packages =
    sage_source_loader
